--- a/style.css
+++ b/style.css
@@ -1,20 +1,106 @@
-*{
-    margin:0;
-    padding: 0;
-}
+*
+body {
+    display: flex;
+    background: linear-gradient(0.25turn, #91f1ef,  #ffd5e0);
+    }
 
-body{
-    background-color:#7abd87 ;
-}
+ .header{
+    width: 50%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+   background-color:  #f8acc8;
+   border-radius: 10rem;
+   position: relative;
+   left: 64rem;      
+ }
 
-.header{
+
+
+.header h1{
+    font-size: 8rem;   
+} 
+        
+.container {
+    /* background-color: #7abd87; */
+    margin-top: 20rem;
+    position: relative;
+    right: 100rem;
+    bottom: 30rem;
+    padding: 40rem;
     width: 100%;
-    height: 7rem;
-   background-color:  #3e7e55;
+    height: 60%;
+    /* border-radius: 8px; */
+    /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); */
+}       
+        
+.header1 {
+    background-color:  #f8acc8;
+    padding: 40px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    font-size: 3rem;
+    border-radius: 3rem;
+}
+ 
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 9rem;
+    /* padding: 50px; */
+}
+.box {
+    background-color: white;
+    padding: 15px;
+    border-radius: 5px;
+    min-height: 20rem;
+    border-radius: 4rem;
 }
 
-.footer{
-    background-color:  #3e7e55;
-    width: 100%;
-    height: 7rem;
+
+.grid2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 9rem;
+    padding: 20px;
+    margin-top: 7rem;
+    
 }
+
+.box {
+    background-color: white;
+    padding: 15px;
+    border-radius: 5px;
+    min-height: 20rem;
+    font-size: 3rem;
+    color: grey;
+    border-radius: 1.5rem;
+}
+
+.header2 {
+    background-color:  #f8acc8;
+    padding: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    font-size: 3rem;
+    border-radius: 3rem;
+}
+
+textarea {
+    width: 96%;
+    height: 150px;
+    padding: 10px;
+    font-size: 1em;
+    border: 2px solid #f4a261;
+    border-radius: 10px;
+    resize: none;
+}
+
+
